--- a/src/templates/screens/SaveQuery.vm
+++ b/src/templates/screens/SaveQuery.vm
@@ -1,60 +1,68 @@
+<div class="app" id="savequery">
+$page.setTitle("Save Your Query")
+
+<h2>$page.Title</h2>
+
 #set ($action = $link.setPage("SaveQuery.vm").setAction("Search").addPathInfo("nextTemplate", "QueryList.vm"))
 #set ($query = $scarabR.Query)
 #set ($queryGroup = $intake.Query.mapTo($query)) 
 #set ($user = $data.User)
 #set ($module = $scarabR.CurrentModule)
 #set ($queryString = $data.Parameters.getString("queryString"))
-
-
    
 <form method="post" action="$action" >
 <input type="hidden" name="$queryGroup.Value.Key" value="$queryString" />
 
 #if ($queryString)
 
-<p class="functnbar"><input type="submit" value="save/submit" name="eventSubmit_doSavequery" />&#160;<input type="submit" value="cancel" name="eventSubmit_doCancel"  /></p>
+ <div class="functnbar">
+ <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+   <td><input type="submit" value="save/submit" name="eventSubmit_doSavequery" />&#160;</td>
+   <td><input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
+  </tr>
+ </table>
+ </div>
 
-<h3>Save Your Query</h3>
+ <h3>Query Information</h3>
 
-      <div class="axial">
-       <table cellpadding="3" cellspacing="2" border="0">
-        <tr>
-         <th width="120">query name</th>
+ <div class="axial">
+ <table cellpadding="3" cellspacing="2" border="0">
+  <tr>
+   <th width="120">query name</th>
+   <td>#fieldErrorMsg($queryGroup.Name "")<input type="text" name="$queryGroup.Name.Key" size="25" value="$!queryGroup.Name" /></td>
+  </tr>
+  <tr>
+   <th width="120">query description</th>
+   <td><textarea name="$queryGroup.Description.Key" rows="4" cols="40">$!queryGroup.Description</textarea></td>
+  </tr>
+  <tr>
+   <th width="120">Availability</th>
+   <td>#queryTypeSelectBox ($query)
+   </td>
+  </tr>
+  <tr>
+   <th width="120">location</th>
+   <td>current project '$module.Name'</td>
+   <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId" />
+  </tr>
+ </table>
+ </div>
 
-         <td>#fieldErrorMsg($queryGroup.Name "")<input type="text" name="$queryGroup.Name.Key" size="25" value="$!queryGroup.Name" /></td>
-        </tr>
-
-        <tr>
-         <th width="120">query description</th>
-
-         <td><textarea name="$queryGroup.Description.Key" rows="4" cols="40">$!queryGroup.Description</textarea></td>
-        </tr>
-
-        <tr>
-         <th width="120">Availability</th>
-
-         <td>#queryTypeSelectBox ($query)
-         </td>
-        
-        </tr>
-
-        <tr>
-         <th width="120">location</th>
-         <td>current project '$module.Name'</td>
-         <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId">
-        </tr>
-       </table>
-      </div>
-
-<p class="functnbar"><input type="submit" value="save/submit" name="eventSubmit_doSavequery"/>&#160;<input type="submit" value="cancel" name="eventSubmit_doCancel" /></p>
-     </div></td>
-    </tr>
-   </table>
-$intake.declareGroups()
+ <div class="functnbar2">
+ <table cellpadding="0" cellspacing="0" border="0">
+  <tr>
+   <td><input type="submit" value="save/submit" name="eventSubmit_doSavequery" />&#160;</td>
+   <td><input type="submit" value="cancel" name="eventSubmit_doCancel" /></td>
+  </tr>
+ </table>
+ </div>
+ 
+ $intake.declareGroups()
 
 #else
-  <p class="alert">No query to save. Please <a href="$link.setPage("AdvancedQuery.vm")">enter a query.</a>
+ <p class="alert">No query to save. Please <a href="$link.setPage("AdvancedQuery.vm")">enter a query.</a></p>
 #end
 
-
 </form>
+</div
