reverting to the previous WORKING version Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/RegisterConfirm.vm
+++ b/src/templates/screens/RegisterConfirm.vm
@@ -1,49 +1,53 @@
-<div class="app" id="registerconfirm">
 $page.setTitle("Confirm New Account Information")
 
-<h2>$page.Title</h2>
+<div id="registerconfirm" class="app">
+
+<h3>$page.Title</h3>
 
 ## get the user out of the temp hashtable
 #set ($user = $data.User.getTemp($scarabG.Constant.SESSION_REGISTER))
 #if (!$user.FirstName)
- <p class="alert">
- There has been an error locating the required information. Please go
- back to the <a href="$link.setPage("Register.vm")">Registration</a> page
- and try again.
- </p>
+
+<p class="alert">
+There has been an error locating the required information. Please go
+back to the <a href="$link.setPage("Register.vm")">Registration</a> page
+and try again.
+</p>
+
 #else
- <p>
- Please confirm that the information below is accurate, then click the
- Confirm Registration button. This will send an email to your account with
- instructions for the next step. Otherwise click the Back button to go
- back to the Registration page.
- </p>
+
+<p>
+Please confirm that the information below is accurate, then click the
+Confirm Registration button. This will send an email to your account with
+instructions for the next step. Otherwise click the Back button to go
+back to the Registration page.
+</p>
 
 <form action="$link.setPage("RegisterConfirm.vm")" method="post">
-<input type="hidden" name="action" value="RegisterConfirm" />
-<input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="Confirm.vm" />
- <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="Register.vm" />
+    <input type="hidden" name="action" value="RegisterConfirm">
+    <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="Confirm.vm">
+    <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="Register.vm">
 
-<h3>Account Information</h3>
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
- <tr>
-  <th>Email Address</th>
-  <td>$user.Email</td>
- </tr>
- <tr>
-  <th>Full Name</th>
-  <td>$user.FirstName $user.LastName</td>
- </tr>
- <tr>
-  <td colspan="2">
-   <input type="submit" name="eventSubmit_doBack" value="Back" />
-   <input type="submit" name="eventSubmit_doConfirmRegistration" value="Confirm Registration" />
-  </td>
- </tr>
+	<tr>
+		<th>Email Address</th>
+		<td>$user.Email</td>
+	</tr>
+	<tr>
+		<th>Full Name</th>
+		<td>$user.FirstName $user.LastName</td>
+	</tr>
+	<tr>
+		<td colspan="2">
+            <input type="submit" name="eventSubmit_doBack" value="Back">
+    		<input type="submit" name="eventSubmit_doConfirmRegistration" value="Confirm Registration">
+		</td>
+	</tr>
 </table>
 </div>
 </form>
 
 #end
+
 </div>
